<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Jarvis</string>
    <string name="app_descrip"><![CDATA[Jarvis android client.<br /><a href="$URL">Get</a> update.]]></string>
    <string name="app_credits">Aaron Barnes &lt;aaron@io.net.nz&gt;</string>
    <string name="template_user_agent" translatable="false">"%1$s/%2$s (Linux; Android)"</string>

    <string name="search_label">Call</string>
    <string name="search_hint">API call</string>
    <string name="lookup_call">API call</string>
    <string name="lookup_about">About</string>
    <string name="empty_result">No entry found for this word, or problem reading data.</string>
    <string name="lookup_help">Help</string>
    <string name="title_activity_input_dialog">InputDialog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_apkurl">Upgrade URL</string>
    <string name="pref_apkurl_summary">URL of APK file for downloading upgrades</string>
    <string name="pref_apkurl_default">http://example.com/Jarvis.apk</string>
    <string name="pref_serverurl">Server Location</string>
    <string name="pref_serverurl_summary">URL to access server (without trailing slash)</string>
    <string name="pref_serverurl_default">http://127.0.0.1:8080</string>
    <string name="pref_serversecret">Server Secret</string>
    <string name="pref_serversecret_summary">Secret passphrase for server</string>
    <string name="pref_serversecret_default">secret</string>
    <string name="lookup_preferences">Preferences</string>

</resources>
